--- a/src/index.css
+++ b/src/index.css
@@ -97,8 +97,17 @@ code {
   border-radius: 10px;
 }
 
+.side-nav-container {
+  margin-top: 86px;
+  border-top: 1px solid #979797;
+}
+
 .selectable:hover {
   cursor: pointer;
+}
+
+.selectable {
+  user-select: none;
 }
 
 .modal {
@@ -107,6 +116,10 @@ code {
   padding: 20px;
   background-color: white;
   height: fit-content;
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
 }
 
 .modal-header {
@@ -134,7 +147,47 @@ code {
 }
 
 .sample-drag-zone {
-  border: 2px dashed #E4E6E8;
+  border: 2px dashed #e4e6e8;
   height: 40px;
   margin-bottom: 10px;
+}
+
+.column {
+  flex-direction: column;
+}
+
+.dropzone {
+  display: block;
+  width: 100%;
+  height: 80px;
+  margin-top: 10px;
+}
+
+.lane {
+  width: 100%;
+  height: fit-content;
+  background-color: white;
+  margin-top: 10px;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.lane-header {
+  background-color: #EF6031;
+  border-radius: 5px 5px 0px 0px;
+  color: white;
+  height: fit-content;
+  padding: 5px;
+
+}
+
+.bar {
+  background-color: #1973BA;
+  padding: 5px;
+  color: white;
+  border-radius: 5px;
+}
+
+.bars {
+  margin-top: 5px;
+  padding: 2px;
 }
